@@ -18,6 +18,9 @@
   - The Configuration Tool windows are now scalable, so
     that they will no longer look very small in e.g.
     full-screen or High DPI modes. (ant_222)
+  - You can now change the current output dynamically
+    with CONFIG command, e.g. "CONFIG -set output=ttf"
+    and "CONFIG -set output=default". (Wengier)
   - The setting "output=default" will enable the OpenGL
     output for the Linux platform if possible. (Wengier)
 0.83.10
